# fra2mo_navigation

./: CMakeLists.txt  README.md  package.xml
config/: nav2_params.yaml
launch/: amcl.launch.py  slam.launch.py
maps/: mappa2.pgm  mappa2.yaml  mappa_leonardo.pgm  mappa_leonardo.yaml
