<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>fra2mo_navigation</name>
    <version>0.0.1</version>
    <description>Navigation package for mapping (SLAM) and localization (AMCL) in ROS 2.</description>
    
    <maintainer email="g.vestri2904@gmail.com">Giulio</maintainer>
    <license>MIT</license>
    
    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <!-- Declare dependencies on ROS 2 packages -->
    <depend>slam_toolbox</depend>
    <depend>nav2_bringup</depend>
    <depend>nav2_amcl</depend>
    <depend>robot_state_publisher</depend>
    <depend>ament_lint_auto</depend>
    <depend>ament_lint_common</depend>
        <export>
            <build_type>ament_cmake</build_type>
        </export>
</package>
